WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125657
Fix a silly mistake of
r160467
https://bugs.webkit.org/show_bug.cgi?id=125657
Summary
Fix a silly mistake of r160467
Benjamin Poulain
Reported
2013-12-12 14:40:01 PST
Fix a silly mistake of
r160467
Attachments
Patch
(7.56 KB, patch)
2013-12-12 14:41 PST
,
Benjamin Poulain
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2013-12-12 14:41:16 PST
Created
attachment 219121
[details]
Patch
Alexey Proskuryakov
Comment 2
2013-12-12 15:04:26 PST
Comment on
attachment 219121
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=219121&action=review
> Source/WebCore/platform/network/cf/ResourceHandleCFURLConnectionDelegateWithOperationQueue.cpp:136 > + if (!!protector->hasHandle()) {
Can we just use "if (protector->hasHandle())"?
> Source/WebCore/platform/network/cf/ResourceHandleCFURLConnectionDelegateWithOperationQueue.cpp:164 > - if (!protector->hasHandle()) { > + if (!!protector->hasHandle()) {
Ditto
> Source/WebCore/platform/network/cf/ResourceHandleCFURLConnectionDelegateWithOperationQueue.cpp:197 > + if (!!protector->hasHandle()) {
Ditto.
> Source/WebCore/platform/network/cf/ResourceHandleCFURLConnectionDelegateWithOperationQueue.cpp:272 > + if (!!protector->hasHandle()) {
Ditto
Benjamin Poulain
Comment 3
2013-12-12 16:29:17 PST
(In reply to
comment #2
)
> (From update of
attachment 219121
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=219121&action=review
> > > Source/WebCore/platform/network/cf/ResourceHandleCFURLConnectionDelegateWithOperationQueue.cpp:136 > > + if (!!protector->hasHandle()) { > > Can we just use "if (protector->hasHandle())"?
Of course :) Will fix.
Benjamin Poulain
Comment 4
2013-12-12 19:50:42 PST
Committed
r160525
: <
http://trac.webkit.org/changeset/160525
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug